--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.1",
     "nodemon": "^3.1.4"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.0"
   }
 }
